MAT-140
Handle Alert Rules

* Read static alert rules at the discovery (MonitorDiscoveryVisitor)

* Read instance alert rules at the discovery (MonitorDiscoveryVisitor)

* Evaluated the alert rules in the Monitor class

* Unit tests